Header and slider improved

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -9,9 +9,9 @@
     "sold_out_badge_color": "#242424",
     "sold_out_badge_font_color": "#ffffff",
     "cart_color": "#A7A7A7",
-    "color_primary_navigation": "#242424",
-    "color_primary_navigation_hover": "#595959",
-    "header-bg-color": "#ffffff",
+    "color_primary_navigation": "#cccccc",
+    "color_primary_navigation_hover": "#ffffff",
+    "header-bg-color": "#000000",
     "header-border-color": "#ffffff",
     "header-transparent-text": "#fff",
     "header-transparent-background": "#242424",
