Preliminary template ready

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -36,20 +36,20 @@
     "pop-up-text-color": "#242424",
     "cart-drawer-bg": "#FFFFFF",
     "cart-drawer-text": "#242424",
-    "color_footer_bg": "#F3F3F3",
-    "color_footer_text": "#414141",
-    "type_header_font": "neuzeit_office_soft_rounded_n7",
+    "color_footer_bg": "#414141",
+    "color_footer_text": "#f3f3f3",
+    "type_header_font": "abril_fatface_n4",
     "header-text-size": 22,
     "heading_spacing": 1,
     "heading_font_case": "uppercase",
     "type_base_font": "neuzeit_office_n4",
-    "typography-body-font-size": 14,
-    "type_navigation_font": "neuzeit_office_soft_rounded_n7",
-    "header_font_size": 14,
+    "typography-body-font-size": 16,
+    "type_navigation_font": "archivo_narrow_n4",
+    "header_font_size": 19,
     "header_font_case": "normal",
     "button_style": "square",
     "button_text_case": "none",
-    "button_font_size": 14,
+    "button_font_size": 16,
     "button_font_style": "normal",
     "product_page_font_size": 24,
     "product_page_font_case": "normal",
@@ -74,6 +74,9 @@
     "predictive_search_collections": true,
     "predictive_search_show_vendor": false,
     "predictive_search_show_price": true,
+    "sm_facebook_link": "https:\/\/www.facebook.com\/",
+    "sm_twitter_link": "https:\/\/twitter.com\/",
+    "sm_instagram_link": "https:\/\/www.instagram.com",
     "social_sharing_blog": true,
     "share_facebook": true,
     "share_twitter": true,
@@ -88,6 +91,9 @@
     "animations_enabled": true,
     "page_fade_enabled": true,
     "ken_burns_enabled": true,
+    "checkout_header_image": "shopify:\/\/shop_images\/00.jpg",
+    "checkout_logo_image": "shopify:\/\/shop_images\/Bildschirmfoto_2020-12-17_um_13.44.35.png",
+    "checkout_logo_size": "small",
     "enable-sale-badge": true,
     "enable-sold-out-badge": true,
     "show_reviews": true,
