Front fixes, localization

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -91,8 +91,8 @@
     "animations_enabled": true,
     "page_fade_enabled": true,
     "ken_burns_enabled": true,
-    "checkout_header_image": "shopify:\/\/shop_images\/00.jpg",
-    "checkout_logo_image": "shopify:\/\/shop_images\/Bildschirmfoto_2020-12-17_um_13.44.35.png",
+    "checkout_header_image": "shopify:\/\/shop_images\/great-gatsby-1928-rolls-royce-phantom-i-photo-via-worldwide-auctioneers_100851511_l.jpg",
+    "checkout_logo_image": "shopify:\/\/shop_images\/photo_2023-04-04_06-09-00.jpg",
     "checkout_logo_size": "small",
     "enable-sale-badge": true,
     "enable-sold-out-badge": true,
